--- a/public/asset/css/style_back.css
+++ b/public/asset/css/style_back.css
@@ -6,3 +6,8 @@
 body{
     background-color: #f3f4f7;
 }
+
+.card{
+    border: none !important;
+    box-shadow: 8px 9px 40px -10px rgba(28,27,27,0.61) !important;
+}
